# nacro

./: .gitignore  CMakeLists.txt  LICENSE  NacroExpander.cpp  NacroExpanders.cpp  NacroExpanders.h  NacroParsers.cpp  NacroParsers.h  NacroPragmaHandler.cpp  NacroRule.cpp  NacroRule.h  NacroVerifier.cpp  NacroVerifier.h  README.md
.github/workflows/: release-with-prebuilt-llvm.yml
Playground/: CMakeLists.txt  NacroASTPlayground.cpp  NacroPlayground.cpp
cmake/: Python.cmake  find_python_module.py
test/: ArgProtecting.c  CMakeLists.txt  DeclLeaking.c  SimpleLoopCodeGen.c  StringifyInLoop.c  lit.cfg.py  lit.site.cfg.py.in  llvm-lit.py
unittest/: CMakeLists.txt  LexingTestFixture.h  TestNacroExpander.cpp  TestNacroExpanders.cpp  TestNacroParser.cpp
utils/: CMakeLists.txt  clang-nacro.sh.in
